# weft-qa

./: .mcp.json  CLAUDE.md  README.md
api/: main.py  pyproject.toml
api/app/agents/test_gen/: agent.py
api/app/agents/test_gen/prompts/: test_gen_system.md
api/app/agents/test_gen/utils/: nodes.py  state.py
api/app/core/: app_config.py  container.py  llm.py  mongodb.py  prompt_loader.py  security.py
api/app/models/: chat.py  user.py
api/app/routers/: auth.py  chat.py
api/tests/unit/: test_auth_router.py  test_security.py
docs/: folder-structure.md  weft-mvp-draft.md
openspec/: config.yaml
openspec/changes/add-user-auth/: design.md  proposal.md  tasks.md
openspec/changes/add-user-auth/specs/chat/: spec.md
openspec/changes/add-user-auth/specs/user-auth/: spec.md
web/: middleware.ts  package-lock.json  package.json
web/app/: assistant.tsx  globals.css  page.tsx
web/app/login/: page.tsx
web/app/register/: page.tsx
web/components/: app-header.tsx  attachment.tsx  login-form.tsx  reasoning.tsx  register-form.tsx  thread.tsx
