[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector>=4.49.1",
    "fastapi>=0.138.0",
    "langchain-openrouter>=0.2.4",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.49.0",
]

