[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector>=4.49.1",
    "fastapi>=0.138.0",
    "langchain-openrouter>=0.2.4",
    "langgraph>=1.2.6",
    "email-validator>=2.0.0",
    "motor>=3.6.0",
    "argon2-cffi>=23.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "uvicorn>=0.49.0",
]

[tool.uv]
dev-dependencies = [
    "anyio[trio]>=4.0.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

